# self-llm

./: Cargo.toml  LICENSE  README.en.md  README.md  README.zh-CN.md
.github/: copilot-instructions.md
.github/workflows/: publish.yml
src/: client.rs  config.rs  error.rs  lib.rs  sse.rs  types.rs
src/anthropic/: mod.rs  types.rs
src/openai/: mod.rs  types.rs
tests/: integration_test.rs
