[package]
name = "self-llm"
version = "0.1.5"
edition = "2024"
description = "Unified chat API for multiple LLM providers"
license = "MIT"
readme = "README.en.md"
repository = "https://github.com/ijkzen/self-llm"
homepage = "https://github.com/ijkzen/self-llm"
documentation = "https://docs.rs/self-llm"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
futures = "0.3"
bytes = "1"

[dev-dependencies]
dotenvy = "0.15"
